name:                replay-syslog
version:             0.1
synopsis:            Replay syslog traffic from a file.
-- description:
homepage:            https://github.com/andrewthad/replay-syslog#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            software
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable replay-syslog
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    StreamLines
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , BoundedChan
    , streaming
    , streaming-bytestring
    , optparse-applicative
    , network
    , bytestring
    , transformers
    , fast-logger
    , containers
    , time
    , clock
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/andrewthad/replay-syslog
